# axum_postgre_email

./: .env  Cargo.toml  Master_Rust_Backend_with_Axum.desktop  README.md
migrations/: 20241119235255_users.down.sql  20241119235255_users.up.sql
src/: config.rs  main.rs
src/db/: db_client.rs  mod.rs  user_ext.rs
src/errors/: error_message.rs  error_response.rs  http_error.rs  mod.rs
src/mail/: mails.rs  sendmail.rs
src/middleware/: auth_mw.rs  mod.rs
src/models/: mod.rs
src/models/dtos/: filter_user.rs  forgot_password_request.rs  login_user.rs  mod.rs  name_update.rs  register_user.rs  request_query.rs  reset_password_request.rs  response.rs  role_update.rs  user_data.rs  user_list_response.rs  user_login_response.rs  user_password_update.rs  user_response.rs  verify_email_query.rs
src/models/entities/: mod.rs  user.rs  user_role.rs
src/pages/: mod.rs
src/routes/: mod.rs
src/routes/api/: auth_handler.rs  mod.rs  routes.rs  users_handler.rs
src/utils/: password.rs  token.rs
